--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,50 @@
                         >This is a task</label
                     >
                 </li>
+                <li class="todo-app__item">
+                    <input
+                        type="checkbox"
+                        id="task1"
+                        class="todo-app__checkbox"
+                    />
+                    <label for="task1" class="todo-app__label"
+                        >This is a task</label
+                    >
+                </li>
+                <li class="todo-app__item">
+                    <input
+                        type="checkbox"
+                        id="task1"
+                        class="todo-app__checkbox"
+                    />
+                    <label for="task1" class="todo-app__label"
+                        >This is a task</label
+                    >
+                </li>
+                <li class="todo-app__item">
+                    <input
+                        type="checkbox"
+                        id="task1"
+                        class="todo-app__checkbox"
+                    />
+                    <label for="task1" class="todo-app__label"
+                        >This is a task</label
+                    >
+                </li>
+                <li class="todo-app__item">
+                    <input
+                        type="checkbox"
+                        id="task1"
+                        class="todo-app__checkbox"
+                    />
+                    <label for="task1" class="todo-app__label"
+                        >This is a task</label
+                    >
+                </li>
             </ul>
             <div class="todo-app__footer">
-                <span class="todo-app__counter">Items left</span>
+                <div class="todo-app__counter">5 Items left</div>
+                <div class="todo-app__clear">Clear Completed</div>
                 <div class="todo-app__tabs">
                     <span class="todo-app__tab" id="tab-all">All</span>
                     <span class="todo-app__tab" id="tab-active">Active</span>
@@ -59,10 +100,11 @@
                         >Completed
                     </span>
                 </div>
-                <span class="todo-app__clear">Clear Completed</span>
             </div>
         </div>
-        <footer class="footer">Drag and drop to reorder list</footer>
+        <footer class="footer">
+            <div class="container">Drag and drop to reorder list</div>
+        </footer>
 
         <!-- <div class="attribution">
             Challenge by
