todo-app.scss : added close, added completed state styling for tasks; base.scss: unset default button style; variable.scss: added gradient clr variables

--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,7 @@
                     <label for="task1" tabindex="1 " class="todo-app__label"
                         >This is a task</label
                     >
-                </li>
-                <li class="todo-app__item">
-                    <input
-                        type="checkbox"
-                        id="task2"
-                        class="todo-app__checkbox"
-                    />
-                    <label for="task2" tabindex="1 " class="todo-app__label"
-                        >This is a task</label
-                    >
+                    <button class="todo-app__close"></button>
                 </li>
             </ul>
             <div class="todo-app__footer">
