layout.scss: created; todo-app.ts: created, added Task and TaskUI classes

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
     </head>
     <body>
         <header class="header">
-            <div class="container">
-                <h1 class="title">Todo</h1>
+            <div class="container header__content">
+                <h1 class="title header__title">Todo</h1>
                 <button class="mode" aria-hidden="true"></button>
             </div>
         </header>
@@ -38,19 +38,7 @@
                 class="todo-app__input"
                 placeholder="Create a new todo..."
             />
-            <ul class="todo-app__list">
-                <li class="todo-app__item">
-                    <input
-                        type="checkbox"
-                        id="task1"
-                        class="todo-app__checkbox"
-                    />
-                    <label for="task1" tabindex="1 " class="todo-app__label"
-                        >This is a task</label
-                    >
-                    <button class="todo-app__close"></button>
-                </li>
-            </ul>
+            <ul class="todo-app__list"></ul>
             <div class="todo-app__footer">
                 <div class="todo-app__counter">5 Items left</div>
                 <div class="todo-app__tabs">
