todo-app/app.ts: replaced feature and id assignement

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,9 @@
             <div class="todo-app__footer">
                 <div class="todo-app__counter">5 Items left</div>
                 <div class="todo-app__tabs">
-                    <span class="todo-app__tab" id="tab-all">All</span>
-                    <span class="todo-app__tab" id="tab-active">Active</span>
-                    <span class="todo-app__tab" id="tab-completed"
-                        >Completed
-                    </span>
+                    <span class="todo-app__tab" id="all">All</span>
+                    <span class="todo-app__tab" id="active">Active</span>
+                    <span class="todo-app__tab" id="done">Completed</span>
                 </div>
                 <div class="todo-app__clear">Clear Completed</div>
             </div>
